--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,9 @@ inputs:
   tag:
     required: false
     description: "ecr tag name"
+  github-token
+    required: false
+    description: "github token for higher rate limits in downloading releases"
   resource-tags:
     required: false
     description: "resource tags, comma separated key=value pairs"
